--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta property="og:title" content="CellKon | Pure And Authentic seller products are sold " />
+  <meta property="og:title" content="Versity Tutor | Pure And Authentic seller products are sold " />
   <meta property="og:type" content="website" />
   <meta property="og:description"
-    content="CellKon is a professional e-commerce provider company. This Company sell pure and authentic seller products. Powered by CELLKON.com" />
+    content="Versity Tutor is a professional e-commerce provider company. This Company sell pure and authentic seller products. Powered by VERSITY TUTOR.com" />
   <meta property="og:image" content="https://i.ibb.co/rtnMWzk/Frame-1339.png" />
 
   <title>VERSITY TUTOR|online tutor</title>
